[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Cold enemy.png" type="Texture" id=1]
[ext_resource path="res://Cold.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "cold",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 36.7988

[node name="Cold" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "cold"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer1" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Cold_body_entered"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
